上传基准值

--- a/基准值.md
+++ b/基准值.md
@@ -1,4 +1,8 @@
 # 以下是联想笔记本测试的结果
+CPU: AMD Ryzen 9 7945HX 16核32线程
+内存: 64G DDR 5
+OS: deepinV23
+磁盘：SAMSUNG MZVL21T0HCLR-00BL2，pcie4 nvme .m2 1T
 
 ## CPU测试
 ```bash
@@ -71,9 +75,32 @@ Threads fairness:
     events (avg/stddev):           1507314.7500/18424.97
     execution time (avg/stddev):   6.1382/0.03
 
-## 网络测试
+## 网络测试，本地(千M)以太网,但是测试结果差很多
 ```bash
+# 服务端
 
-
+# 客户端
+"podman" run --rm --name easybench --network=host swr.lan.aiminjie.com/amj/easybench:latest \
+        iperf3 -P 8 -i 5 -t 60 -c 172.16.3.17
 ```
 测试结果如下：
+- - - - - - - - - - - - - - - - - - - - - - - - -
+[ ID] Interval           Transfer     Bandwidth       Retr
+[  4]   0.00-60.00  sec  83.9 MBytes  11.7 Mbits/sec    0             sender
+[  4]   0.00-60.00  sec  83.5 MBytes  11.7 Mbits/sec                  receiver
+[  6]   0.00-60.00  sec  85.1 MBytes  11.9 Mbits/sec    0             sender
+[  6]   0.00-60.00  sec  84.7 MBytes  11.8 Mbits/sec                  receiver
+[  8]   0.00-60.00  sec  84.9 MBytes  11.9 Mbits/sec    6             sender
+[  8]   0.00-60.00  sec  84.5 MBytes  11.8 Mbits/sec                  receiver
+[ 10]   0.00-60.00  sec  84.0 MBytes  11.7 Mbits/sec    0             sender
+[ 10]   0.00-60.00  sec  83.6 MBytes  11.7 Mbits/sec                  receiver
+[ 12]   0.00-60.00  sec  84.1 MBytes  11.8 Mbits/sec    0             sender
+[ 12]   0.00-60.00  sec  83.8 MBytes  11.7 Mbits/sec                  receiver
+[ 14]   0.00-60.00  sec  84.7 MBytes  11.8 Mbits/sec   11             sender
+[ 14]   0.00-60.00  sec  84.5 MBytes  11.8 Mbits/sec                  receiver
+[ 16]   0.00-60.00  sec  84.1 MBytes  11.8 Mbits/sec    0             sender
+[ 16]   0.00-60.00  sec  83.8 MBytes  11.7 Mbits/sec                  receiver
+[ 18]   0.00-60.00  sec  84.7 MBytes  11.8 Mbits/sec    0             sender
+[ 18]   0.00-60.00  sec  84.4 MBytes  11.8 Mbits/sec                  receiver
+[SUM]   0.00-60.00  sec   675 MBytes  94.4 Mbits/sec   17             sender
+[SUM]   0.00-60.00  sec   673 MBytes  94.0 Mbits/sec                  receiver
