--- a/基准值.md
+++ b/基准值.md
@@ -84,6 +84,7 @@ Threads fairness:
         iperf3 -P 8 -i 5 -t 60 -c 172.16.3.17
 ```
 测试结果如下：
+```text
 - - - - - - - - - - - - - - - - - - - - - - - - -
 [ ID] Interval           Transfer     Bandwidth       Retr
 [  4]   0.00-60.00  sec  83.9 MBytes  11.7 Mbits/sec    0             sender
@@ -104,3 +105,20 @@ Threads fairness:
 [ 18]   0.00-60.00  sec  84.4 MBytes  11.8 Mbits/sec                  receiver
 [SUM]   0.00-60.00  sec   675 MBytes  94.4 Mbits/sec   17             sender
 [SUM]   0.00-60.00  sec   673 MBytes  94.0 Mbits/sec                  receiver
+```
+
+# 以下是浪潮服务器测试结果
+CPU：Hygon C86 32-core *2
+内存：512G
+磁盘：SSD 2T，RAID 32T
+
+## CPU测试
+![image](https://github.com/user-attachments/assets/0e53d635-4808-40f1-8fed-232f09e78809)
+
+## 内存测试
+![image](https://github.com/user-attachments/assets/63431909-5ff7-4b8c-b1ad-722b57733a7f)
+
+## 文件读写测试
+![image](https://github.com/user-attachments/assets/9ec180b6-84d4-4987-bf4c-5fa04e144eea)
+
+
